--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @import url("./typography.css"); 
 @import url("./components.css"); 
+@import url("./customAccordion.css"); 
 @import url("./owl.carousel.min.css"); 
 * {
   margin: 0;
@@ -19,5 +20,11 @@ ul {
 .layout {
   margin: 0 auto;
   position: relative;
-  max-width: 1160px;
+  max-width: calc(1160px + 4rem);
+  padding: 0 2rem;
+}
+@media screen and (max-width: 1651px) {
+  .layout {
+    overflow: hidden;
+  }
 }/*# sourceMappingURL=main.css.map */
