--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,10 @@
 @import url("./typography.css"); /*# sourceMappingURL=main.css.map */
 @import url("./components.css"); /*# sourceMappingURL=main.css.map */
+@import url("./customAccordion.css"); /*# sourceMappingURL=main.css.map */
 @import url("./owl.carousel.min.css"); /*# sourceMappingURL=main.css.map */
 
 // variables
-$layout-width: 1160px;
+$layout-width: calc(1160px + 2rem * 2);
 
 * {
   margin: 0;
@@ -21,4 +22,8 @@ ul {
   margin: 0 auto;
   position: relative;
   max-width: $layout-width;
+  padding: 0 2rem;
+  @media screen and (max-width: 1651px) {
+    overflow: hidden;
+  }
 }
