--- a/styles/components.css
+++ b/styles/components.css
@@ -229,6 +229,12 @@ nav ul li {
 .layout .individual img {
   width: 100%;
 }
+.layout .contacts {
+  margin-bottom: 10rem;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
 img {
   pointer-events: none;
 }/*# sourceMappingURL=components.css.map */
