--- a/styles/main.css
+++ b/styles/main.css
@@ -31,15 +31,18 @@ ul {
 }
 
 .section {
-  margin-top: 14rem;
+  padding-top: 7rem;
+  margin-top: 7rem;
 }
 @media screen and (max-width: 1000px) {
   .section {
-    margin-top: 10rem;
+    padding-top: 5rem !important;
+    margin-top: 5rem !important;
   }
 }
 @media screen and (max-width: 600px) {
   .section {
-    margin-top: 5rem;
+    padding-top: 2.5rem !important;
+    margin-top: 2.5rem !important;
   }
 }/*# sourceMappingURL=main.css.map */
