--- a/public/styles/components.css
+++ b/public/styles/components.css
@@ -8,15 +8,44 @@
   height: max-content !important;
 }
 
-.offcanvas-body * {
-  text-align: justify;
+.offcanvas {
+  width: 500px !important;
+  background: url("../assets/trainers/0.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-.offcanvas-body p {
-  color: #000;
+.offcanvas::before {
+  z-index: 0;
+  content: "";
+  position: absolute;
+  left: -1px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.offcanvas-header {
+  position: relative;
+  z-index: 1;
+}
+
+.offcanvas-body {
+  z-index: 1;
+  position: relative;
+}
+.offcanvas-body * {
+  color: #fff;
+  text-align: justify;
 }
 .offcanvas-body img {
   max-width: 100%;
   border-radius: 1rem;
+}
+.offcanvas-body .description {
+  font-size: 0.85rem;
 }
 
 .cbtn,
