--- a/public/styles/components.scss
+++ b/public/styles/components.scss
@@ -6,16 +6,40 @@ $main-color: #faff00;
 .offcanvas-bottom {
   height: max-content !important;
 }
-.offcanvas-body {
-  * {
-    text-align: justify;
+.offcanvas {
+  width: 500px !important;
+  background: url("../assets/trainers/0.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  &::before {
+    z-index: 0;
+    content: "";
+    position: absolute;
+    left: -1px;
+    width: 100%;
+    height: 100%;
+    background: rgba(#000, 0.7);
+    backdrop-filter: blur(10px);
   }
-  p {
-    color: #000;
+}
+.offcanvas-header {
+  position: relative;
+  z-index: 1;
+}
+.offcanvas-body {
+  z-index: 1;
+  position: relative;
+  * {
+    color: #fff;
+    text-align: justify;
   }
   img {
     max-width: 100%;
     border-radius: 1rem;
+  }
+  .description {
+    font-size: 0.85rem;
   }
 }
 .cbtn,
@@ -85,7 +109,8 @@ nav {
 }
 .preview {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 1), transparent), linear-gradient(transparent, rgba(0, 0, 0, 1)), url("../assets/gallery/0.jpg") no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 1), transparent), linear-gradient(transparent, rgba(0, 0, 0, 1)),
+    url("../assets/gallery/0.jpg") no-repeat center center;
   background-size: cover;
   .layout {
     height: 100%;
