--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -46,4 +46,11 @@ ul {
     padding-top: 2.5rem !important;
     margin-top: 2.5rem !important;
   }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }/*# sourceMappingURL=main.css.map */
