--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -42,3 +42,10 @@ ul {
     margin-top: 2.5rem !important;
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
